[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/themes/buttons-green.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/Settings-buttons.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/icons/buttons/key.move.svg" type="Texture" id=3]
[ext_resource path="res://assets/images/icons/buttons/key.esc.svg" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/buttons/key.enter.svg" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Rubik-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/NewStage-Input/NewStage-Input.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.858824, 0.215686, 0.215686, 0.898039 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id=6]
Panel/styles/panel = SubResource( 5 )

[node name="NewStage-Input" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 2161.0
margin_bottom = 906.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 2111.0
margin_bottom = 856.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 2061.0
margin_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 25

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 2061.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
align = 1
placeholder_text = "Stage Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 293.0
margin_right = 2061.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 25
custom_constants/margin_bottom = 25

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 25.0
margin_right = 2061.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
align = 1
placeholder_text = "Stage Code"
caret_blink = true
caret_blink_speed = 0.5

[node name="AddStage2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 586.0
margin_right = 2061.0
margin_bottom = 806.0
rect_min_size = Vector2( 0, 220 )
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 25
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/AddStage2"]
margin_left = 15.0
margin_top = 25.0
margin_right = 2046.0
margin_bottom = 205.0
mouse_filter = 1
theme = ExtResource( 1 )
text = "SELECT_BUTTON_WORD"
icon_align = 1
expand_icon = true

[node name="ControlsMargin" type="MarginContainer" parent="."]
margin_top = 910.0
margin_right = 2161.0
margin_bottom = 1000.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Controls" type="HBoxContainer" parent="ControlsMargin"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2146.0
margin_bottom = 75.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ControlsMargin/Controls"]
margin_right = 798.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/Controls/MarginContainer"]
margin_left = 35.0
margin_right = 763.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="ControlsMargin/Controls/MarginContainer/HBoxContainer"]
margin_right = 212.0
margin_bottom = 60.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ControlsMargin/Controls/MarginContainer/HBoxContainer"]
margin_left = 216.0
margin_top = 2.0
margin_right = 728.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "MOVE_BUTTON_WORD"

[node name="MarginContainer2" type="MarginContainer" parent="ControlsMargin/Controls"]
margin_left = 802.0
margin_right = 1494.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/Controls/MarginContainer2"]
margin_left = 35.0
margin_right = 657.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="ControlsMargin/Controls/MarginContainer2/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="ControlsMargin/Controls/MarginContainer2/HBoxContainer"]
margin_left = 64.0
margin_top = 2.0
margin_right = 622.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "SELECT_BUTTON_WORD"

[node name="MarginContainer3" type="MarginContainer" parent="ControlsMargin/Controls"]
margin_left = 1498.0
margin_right = 2131.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/Controls/MarginContainer3"]
margin_left = 35.0
margin_right = 598.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="ControlsMargin/Controls/MarginContainer3/HBoxContainer"]
margin_right = 50.0
margin_bottom = 60.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="ControlsMargin/Controls/MarginContainer3/HBoxContainer"]
margin_left = 54.0
margin_top = 2.0
margin_right = 563.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "BACK_BUTTON_WORD"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.6
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = SubResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "! Invalid Code ยก"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/AddStage2/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_Timer_timeout"]
